# pyferslib

./: .gitignore  CMakeLists.txt  CMakePresets.json  FERSlib_Log.txt  Makefile.am  Makefile.in  README  README.md  ReleaseNotes.txt  aclocal.m4  configure  configure.ac  ferslib.pc.in  meson.build
FERSlibDemo/Demo5202/: Makefile_local.tmp  Makefile_share.tmp  install_demo_locallib.sh
FERSlibDemo/Demo5202/src/: Demo5202.cpp  Demo5202.h
FERSlibDemo/Demo5203/: Makefile_local.tmp  Makefile_share.tmp  README  _TMP_Makefile  install_demo_locallib.sh  install_demo_systemlib.sh
FERSlibDemo/Demo5203/src/: Demo5203.cpp  Demo5203.h
cmake/: mingw-toolchain.cmake
cmake/mingw-shims/: WinSock2.h  Winusb.h
include/: FERS_MultiPlatform.h  FERS_Registers_520X.h  FERS_config.h  FERSlib.h
python/: pyfers.cpp
src/: FERS_LLusb.cpp  FERS_MultiPlatform.c  FERS_configure.c  FERS_configure_5202.c  FERS_configure_5204.c  FERS_paramparser.c  FERS_readout.c  FERSlib.c
tests/: test.py  test_load.c
